[package]
name = "no_std_strings"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "no_std version of crate fixedstr: strings of constant maximum size that can be copied and stack allocated"
repository = "https://github.com/chuckcscccl/no_std_strings/"
keywords = ["string"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde=["dep:serde"]

[dependencies]
serde={version="1", optional=true}

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items", "--features serde"]
